fixed language menu being too central and covering text content unnecessarily while in desktop view

--- a/components/style.css
+++ b/components/style.css
@@ -80,7 +80,7 @@ hr {
 
 .menu-content {
   grid-row: 1 / 3;
-  grid-column: 2 / 3;
+  grid-column: 1 / 4;
   align-self: start;
   justify-self: right;
   z-index: 2;
